@@ -65,3 +65,7 @@ Bug fixes:
 
 - dup2() could crash in some cases for a destination >= 256
   Fixes: http://cygwin.com/ml/cygwin/2013-09/msg00397.html
+
+- Try to workaround the following problem: unlink(2) could fail, if the
+  file was opened casesensitive and has to be moved to the recycler due
+  to a sharing violation.
